# googleapis-common-protos-stubs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
google-stubs/api/: annotations_pb2.pyi  auth_pb2.pyi  backend_pb2.pyi  billing_pb2.pyi  client_pb2.pyi  config_change_pb2.pyi  consumer_pb2.pyi  context_pb2.pyi  control_pb2.pyi  distribution_pb2.pyi  documentation_pb2.pyi  endpoint_pb2.pyi  error_reason_pb2.pyi  field_behavior_pb2.pyi  field_info_pb2.pyi  http_pb2.pyi  httpbody_pb2.pyi  label_pb2.pyi  launch_stage_pb2.pyi  log_pb2.pyi  logging_pb2.pyi  metric_pb2.pyi  monitored_resource_pb2.pyi  monitoring_pb2.pyi  policy_pb2.pyi  quota_pb2.pyi  resource_pb2.pyi  routing_pb2.pyi  service_pb2.pyi  source_info_pb2.pyi  system_parameter_pb2.pyi  usage_pb2.pyi  visibility_pb2.pyi
google-stubs/cloud/: extended_operations_pb2.pyi
google-stubs/cloud/location/: locations_pb2.pyi
google-stubs/gapic/metadata/: gapic_metadata_pb2.pyi
google-stubs/logging/type/: http_request_pb2.pyi  log_severity_pb2.pyi
google-stubs/longrunning/: operations_grpc.pyi  operations_grpc_pb2.pyi  operations_pb2.pyi  operations_pb2_grpc.pyi  operations_proto.pyi  operations_proto_pb2.pyi
google-stubs/rpc/: code_pb2.pyi  error_details_pb2.pyi  http_pb2.pyi  status_pb2.pyi
google-stubs/rpc/context/: attribute_context_pb2.pyi  audit_context_pb2.pyi
google-stubs/type/: calendar_period_pb2.pyi  color_pb2.pyi  date_pb2.pyi  datetime_pb2.pyi  dayofweek_pb2.pyi  decimal_pb2.pyi  expr_pb2.pyi  fraction_pb2.pyi  interval_pb2.pyi  latlng_pb2.pyi  localized_text_pb2.pyi  money_pb2.pyi  month_pb2.pyi  phone_number_pb2.pyi  postal_address_pb2.pyi  quaternion_pb2.pyi  timeofday_pb2.pyi
