[tool.poetry]
name = "googleapis-common-protos-stubs"
version = "2.1.0"
license = "Apache-2.0"
description = "Type stubs for googleapis-common-protos"
authors = ["Henrik Bruåsdal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/henribru/googleapis-common-protos-stubs"
packages = [
    { include = "google-stubs" },
]
classifiers = [
    "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=3.10.0"
googleapis-common-protos = ">=1.56.4"
grpc-stubs = ">=1.24.9"
types-protobuf = "^3.20.4.2"

[tool.poetry.dev-dependencies]
protobuf = "^4.21.9"
mypy-protobuf = "^3.4.0"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"

[tool.isort]
profile = "black"
known_first_party = [
    "google.api",
    "google.gapic.metadata",
    "google.logging.type",
    "google.longrunning",
    "google.rpc",
    "google.type"
]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
