[tool.poetry]
name = "googleapis-common-protos-stubs"
version = "2.3.0"
license = "Apache-2.0"
description = "Type stubs for googleapis-common-protos"
authors = ["Henrik Bruåsdal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/henribru/googleapis-common-protos-stubs"
packages = [
    { include = "google-stubs" },
]
classifiers = [
    "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=3.10.0"
googleapis-common-protos = ">=1.62.0"
grpc-stubs = ">=1.53.0.5"
types-protobuf = ">=3.20.4.2"

[tool.poetry.group.dev.dependencies]
protobuf = {version = "^4.25.2", python = "^3.8"}
mypy-protobuf = {version = "^3.5.0", python = "^3.8"}
isort = {version = "^5.13.2", python = "^3.8"}
black = {version = "^24.1.1", python = "^3.8"}
mypy = {version = "^1.8.0", python = "^3.8"}

[tool.isort]
profile = "black"
known_first_party = [
    "google.api",
    "google.cloud",
    "google.gapic.metadata",
    "google.logging.type",
    "google.longrunning",
    "google.rpc",
    "google.type"
]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
